# ivory-tower

./: AGENTS.md  FIXES.md  README.md  SPEC.md  architecture.md  pyproject.toml
research/: improved_websocket_vs_sse_report.md
research/20260301-191720-9d5a38/: manifest.json
research/20260301-192808-cae049/: manifest.json
research/20260301-194858-465b06/: manifest.json  research-prompt.md
research/20260301-195646-b4a339/: manifest.json  topic.md
research/20260301-200517-a4a45a/: manifest.json
research/20260301-204200-e0475e/: manifest.json  topic.md
research/20260301-205306-a5fac1/: manifest.json  (+1 more)
spec/: 02-STRATEGY-SPEC.md  03-SANDBOX-SPEC.md  04-FIXES.md  05-SANDBOX-FIXES.md  06-ACP-SPEC.md  07-GEPA-FIXES.md  SANDBOX-SPEC.md  STRATEGY-SPEC.md
tests/: test_acp_client.py  test_acp_integration.py  test_adversarial_helpers.py  test_adversarial_strategy.py  test_agents.py  test_blackboard.py  test_cli.py  test_counselors.py  test_debate.py  test_direct_llm.py  test_engine.py  test_executor_acp.py  test_executor_counselors.py  test_executor_direct.py  test_executor_headless.py  test_executor_routing.py  test_integration.py  test_judge_scoring.py  test_live_e2e.py  test_map_reduce.py  test_models.py  test_profiles.py  test_prompts.py  test_red_blue.py  test_run.py  test_sandbox_agentfs.py  test_sandbox_daytona.py  test_sandbox_integration.py  test_sandbox_live.py  test_sandbox_local.py  test_sandbox_types.py  test_session_continuity.py  test_strategies.py  test_streaming.py  test_template_executor.py  test_template_executor_live.py  test_templates.py
(+301 files in other folders)
